--- a/GameChanger Projekt - El Ti/wwwroot/css/frontPage.css
+++ b/GameChanger Projekt - El Ti/wwwroot/css/frontPage.css
@@ -1,4 +1,8 @@
-﻿
+﻿/*
+    Date: 27-05-2020
+    Updated: 29-05-2020
+    Change: 
+*/
 .setPic {
     position: inherit;
     top: 0;
@@ -21,3 +25,4 @@
 body {
     background-color: white;
 }
+
