--- a/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
+++ b/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
@@ -28,6 +28,62 @@
             <a href="Kontakt.html">Kontakt</a>
         </div>
     </div>
+    <div class="frontBox" >
+        <table class="table" style="border:hidden">
+            <thead >
+                <tr>
+                    <th style="padding-right:0px;width:16%">
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg"  style="height:35%;width:auto"/>
+                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
+                    </th>
+                    <th style="padding-right:0px;width:16%">
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" style="height:35%;width:auto" />
+                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
 
+                    </th>
+                    <th style="padding-right:0px">
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" style="height:35%;width:auto" />
+                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
+
+                    </th>
+                    <th style="padding-right:0px">
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" style="height:35%;width:auto" />
+                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
+                    </th>
+                    <th style="padding-right:0px">
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" style="height:35%;width:auto" />
+                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
+                    </th>
+                    <th style="padding-right:10px" >
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" style="height:35%;width:auto" />
+                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
+                    </th>
+                </tr>
+            </thead>
+        </table>
+        <table>
+            <thead>
+                <tr>
+                    <th class="trailerHeader">
+                        <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:4%;height:80%" />
+                    </th>
+                    <th  class="trailerHeader">
+                        <h3>
+                             Seneste trailer
+                        </h3>
+                    </th>
+                    <th class="trailerHeader">
+                        <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:70%;height:80%" />
+                    </th>
+                    <th class="trailerHeader">
+                        <h3>
+                            Mest populære spil
+                        </h3>
+                    </th>
+                </tr>
+            </thead>
+        </table>
+    </div>
+    
 </body>
 
