--- a/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
+++ b/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
@@ -32,53 +32,61 @@
         <table class="table" style="border:hidden">
             <thead >
                 <tr>
-                    <th style="padding-right:0px;width:16%">
-                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg"  style="height:35%;width:auto"/>
+                    <th style="padding-right:0px;width:12%">
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg"  style="height:55%;width:auto"/>
                         <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
                     </th>
-                    <th style="padding-right:0px;width:16%">
-                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" style="height:35%;width:auto" />
-                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
-
-                    </th>
-                    <th style="padding-right:0px">
-                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" style="height:35%;width:auto" />
+                    <th style="padding-right:0px;width:12%">
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" style="height:55%;width:auto" />
                         <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
 
                     </th>
-                    <th style="padding-right:0px">
-                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" style="height:35%;width:auto" />
+                    <th style="padding-right:0px;width:12%">
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" style="height:55%;width:auto" />
+                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
+
+                    </th>
+                    <th style="padding-right:0px;width:12%">
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" style="height:55%;width:auto" />
                         <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
                     </th>
-                    <th style="padding-right:0px">
-                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" style="height:35%;width:auto" />
+                    <th style="padding-right:0px;width:12%">
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" style="height:55%;width:auto" />
                         <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
                     </th>
-                    <th style="padding-right:10px" >
-                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" style="height:35%;width:auto" />
+                    <th style="padding-right:10px;width:12%">
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" style="height:55%;width:auto" />
                         <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
                     </th>
                 </tr>
             </thead>
         </table>
-        <table>
+        <table class="table">
             <thead>
-                <tr>
-                    <th class="trailerHeader">
-                        <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:4%;height:80%" />
+                <tr style="padding-top:1%;padding-bottom:1%">
+                    <th class="trailerHeader" style="width:2%;padding-top:0%;padding-bottom:1%">
+                        <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
                     </th>
-                    <th  class="trailerHeader">
+                    <th  class="trailerHeader" style="text-align:left;width:59%;padding-left:0%;padding-bottom:1%" >
                         <h3>
                              Seneste trailer
                         </h3>
                     </th>
-                    <th class="trailerHeader">
-                        <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:70%;height:80%" />
+                    <th style="padding-right:0%;border:hidden;padding-bottom:1%">
+                        
                     </th>
-                    <th class="trailerHeader">
+                    <th class="trailerHeader" style="text-align:right;padding-right:0%;padding-top:0%;padding-bottom:1%">
+                        <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
+                    </th>
+                    <th class="trailerHeader"style="padding-bottom: 1%" >
                         <h3>
                             Mest populære spil
                         </h3>
+                    </th>
+                </tr>
+                <tr>
+                    <th style="width:100%;height:150%;padding-left:0%;padding-top:1%;padding-right:0%;border:hidden" colspan="2">
+                        <iframe style="width:100%;height:150%" src="https://www.youtube.com/embed/4A05AnPSC6g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </th>
                 </tr>
             </thead>
