--- a/GameChanger Projekt - El Ti/wwwroot/css/frontPage.css
+++ b/GameChanger Projekt - El Ti/wwwroot/css/frontPage.css
@@ -69,6 +69,5 @@ table {
 .trailerHeader {
     background-color: black;
     color: aqua;
-    padding-left: 1%;
-    width: 70%;
+    text-align:left;
 }
