FrontPage0.5 Small update to navbars

--- a/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
+++ b/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
@@ -3,11 +3,11 @@
 }
 
 
-    <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/frontPage.css" />
-        <link rel="stylesheet" href="css/tekstHeader.css" />
-    </head>
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/frontPage.css" />
+    <link rel="stylesheet" href="css/tekstHeader.css" />
+</head>
 
 <body>
     <div class="header" id="frontHeader">
@@ -24,38 +24,37 @@
         <div class="topnav" style="text-align: center">
             <a href="http://localhost:52434/">Forside</a>
             <a href="Spil.html">Spil</a>
-            <a href="Anmeldelser.html">Anmeldelser</a>
             <a href="Kontakt.html">Kontakt</a>
         </div>
     </div>
-    <div class="frontBox" >
+    <div class="frontBox">
         <table class="table" style="border:hidden">
-            <thead >
+            <thead>
                 <tr>
                     <th style="padding-right:0px;width:12%">
-                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg"  style="height:55%;width:auto"/>
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" style="width:100%" />
                         <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
                     </th>
                     <th style="padding-right:0px;width:12%">
-                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" style="height:55%;width:auto" />
-                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
-
-                    </th>
-                    <th style="padding-right:0px;width:12%">
-                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" style="height:55%;width:auto" />
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" style="width:100%" />
                         <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
 
                     </th>
                     <th style="padding-right:0px;width:12%">
-                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" style="height:55%;width:auto" />
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" style="width:100%" />
+                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
+
+                    </th>
+                    <th style="padding-right:0px;width:12%">
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" style="width: 100%" />
                         <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
                     </th>
                     <th style="padding-right:0px;width:12%">
-                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" style="height:55%;width:auto" />
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" style="width: 100%" />
                         <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
                     </th>
                     <th style="padding-right:10px;width:12%">
-                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" style="height:55%;width:auto" />
+                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" style="width: 100%" />
                         <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
                     </th>
                 </tr>
@@ -67,31 +66,122 @@
                     <th class="trailerHeader" style="width:2%;padding-top:0%;padding-bottom:1%">
                         <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
                     </th>
-                    <th  class="trailerHeader" style="text-align:left;width:59%;padding-left:0%;padding-bottom:1%" >
+                    <th class="trailerHeader" style="text-align:left;width:59%;padding-left:0%;padding-bottom:1%">
                         <h3>
-                             Seneste trailer
+                            Seneste trailer
                         </h3>
                     </th>
                     <th style="padding-right:0%;border:hidden;padding-bottom:1%">
-                        
+
                     </th>
                     <th class="trailerHeader" style="text-align:right;padding-right:0%;padding-top:0%;padding-bottom:1%">
                         <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
                     </th>
-                    <th class="trailerHeader"style="padding-bottom: 1%" >
+                    <th class="trailerHeader" style="padding-bottom: 1%">
                         <h3>
                             Mest populære spil
                         </h3>
                     </th>
                 </tr>
                 <tr>
-                    <th style="width:100%;height:150%;padding-left:0%;padding-top:1%;padding-right:0%;border:hidden" colspan="2">
-                        <iframe style="width:100%;height:150%" src="https://www.youtube.com/embed/4A05AnPSC6g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </th>
+                    <td style="width:100%;height:150%;padding-left:0%;padding-top:1%;padding-right:0%;border:hidden" colspan="2">
+                        <iframe style="width:100%;height:250%" src="https://www.youtube.com/embed/4A05AnPSC6g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </td>
+                    <td></td>
+                    <td colspan="2" style="padding-top:0%;padding-left:0%;padding-right:0%">
+                        <table style="border:hidden;padding:0%;width:100%">
+                            <tr>
+                                <td id="whiteThumb">
+                                    <a target="_blank" href="~/Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg">
+                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" style="height:30%" />
+                                    </a>
+                                </td>
+                                <td id="thumbText">
+                                    <h6><strong>Splinter Cell: Black List</strong></h6>
+                                    <p>
+                                        Udgiver: Ubisoft<br />
+                                        Genre: Stealth
+                                    </p>
+                                </td>
+                            </tr>
+                            <tr id="greyThumb">
+                                <td style="padding-bottom:0%;padding-left:2%;padding-right:0%">
+                                    <a target="_blank" href="~/Gamechanger billedmateriale/thumb_gtav.jpg">
+                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" style="height:30%" />
+                                    </a>
+                                </td>
+                                <td id="thumbText">
+                                    <h6><strong>Grand Theft Auto V</strong></h6>
+                                    <p>
+                                        Udgiver: Rockstar Games<br />
+                                        Genre: First Person Shooter
+                                    </p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td id="whiteThumb">
+                                    <a target="_blank" href="~/Gamechanger billedmateriale/Thumbs/thumb_call_of_duty.jpg">
+                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_call_of_duty.jpg" style="height:30%" />
+                                    </a>
+                                </td>
+                                <td id="thumbText">
+                                    <h6><strong>Call Of Duty</strong></h6>
+                                    <p>
+                                        Udgiver: Rockstar Games<br />
+                                        Genre: First Person Shooter
+                                    </p>
+                                </td>
+                            </tr>
+                            <tr id="greyThumb">
+                                <td id="greyThumb">
+                                    <a target="_blank" href="~/Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg">
+                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" style="height:30%" />
+                                    </a>
+                                </td>
+                                <td id="thumbText">
+                                    <h6">
+                                        <strong>Forza 4</strong></h6>
+                                        <p>
+                                            Udgiver: Rockstar Games<br />
+                                            Genre: Motorsport
+                                        </p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td id="whiteThumb">
+                                    <a target="_blank" href="~/Gamechanger billedmateriale/Thumbs/thumb_red_dead_redemption.jpg">
+                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_red_dead_redemption.jpg" style="height:30%" />
+                                    </a>
+                                </td>
+                                <td id="thumbText">
+                                    <h6><strong>Red Dead Redemption</strong></h6>
+                                    <p>
+                                        Udgiver: Rockstar Games<br />
+                                        Genre: First Person Shooter
+                                    </p>
+                                </td>
+                            </tr>
+
+                            <tr id="greyThumb">
+                                <td id="greyThumb">
+                                    <a target="_blank" href="~/Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg">
+                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" style="height:30%" />
+                                    </a>
+                                </td>
+                                <td id="thumbText">
+                                    <h6><strong>Halo 4</strong></h6>
+                                    <p>
+                                        Udgiver: Rockstar Games<br />
+                                        Genre: First Person Shooter
+                                    </p>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
                 </tr>
             </thead>
         </table>
     </div>
-    
+
 </body>
 
