--- a/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
+++ b/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
             <div class="placetextonPic">
                 <h3>ASSASINS CREED</h3>
                 <p>Assassin's Creed er en computerspilserie, der er udgivet af Ubisoft. I spilserien findes der lige nu 11 spil, hvor det seneste udkom d. 5. oktober 2018. </p>
-                <img src="~/Gamechanger billedmateriale/Logo/favorite_icon.png" width="15%" />
+                <img src="~/Gamechanger billedmateriale/Logo/favorite_icon.png" style="width:15%;vertical-align:bottom" />
             </div>
 
         </div>
@@ -37,47 +37,47 @@
                     </th>
                     <th style="padding-right:0px;width:12%">
                         <img src="~/Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" style="width:100%" />
-                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
+                        <p class="placeTextOnThumbs">Grand Theft Auto V</p>
 
                     </th>
                     <th style="padding-right:0px;width:12%">
                         <img src="~/Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" style="width:100%" />
-                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
+                        <p class="placeTextOnThumbs">Halo 4</p>
 
                     </th>
                     <th style="padding-right:0px;width:12%">
                         <img src="~/Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" style="width: 100%" />
-                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
+                        <p class="placeTextOnThumbs">Titanfall</p>
                     </th>
                     <th style="padding-right:0px;width:12%">
                         <img src="~/Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" style="width: 100%" />
-                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
+                        <p class="placeTextOnThumbs">Tomb Raider</p>
                     </th>
                     <th style="padding-right:10px;width:12%">
                         <img src="~/Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" style="width: 100%" />
-                        <p class="placeTextOnThumbs">Splinter Cell: Black List</p>
+                        <p class="placeTextOnThumbs">Forza 4</p>
                     </th>
                 </tr>
             </thead>
         </table>
         <table class="table">
             <thead>
-                <tr style="padding-top:1%;padding-bottom:1%">
-                    <th class="trailerHeader" style="width:2%;padding-top:0%;padding-bottom:1%">
+                <tr>
+                    <th class="trailerHeader" style="width:2%;padding-top:0%;padding-bottom:0.8%;padding-right:1%">
                         <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
                     </th>
-                    <th class="trailerHeader" style="text-align:left;width:59%;padding-left:0%;padding-bottom:1%">
+                    <th class="trailerHeader" style="text-align:left;width:59%;padding-left:0%;padding-bottom:0%;padding-top:1%">
                         <h3>
                             Seneste trailer
                         </h3>
                     </th>
-                    <th style="padding-right:0%;border:hidden;padding-bottom:1%">
+                    <th style="padding-right:0%;border:hidden">
 
                     </th>
-                    <th class="trailerHeader" style="text-align:right;padding-right:0%;padding-top:0%;padding-bottom:1%">
+                    <th class="trailerHeader" style="text-align:right;padding-right:0%;padding-top:0%;padding-bottom:0.8%">
                         <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
                     </th>
-                    <th class="trailerHeader" style="padding-bottom: 1%">
+                    <th class="trailerHeader" style="padding-bottom: 0%;padding-top:1%">
                         <h3>
                             Mest populære spil
                         </h3>
@@ -86,11 +86,20 @@
                 <tr>
                     <td style="width:100%;height:150%;padding-left:0%;padding-top:1%;padding-right:0%;border:hidden" colspan="2">
                         <iframe style="width:100%;height:250%" src="https://www.youtube.com/embed/4A05AnPSC6g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <h4>
+                            Call of Duty Trailer
+                        </h4>
+                        <p style="padding-bottom:0%">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nisl arcu, ornare vel ipsum in, euismod finibus urna. In venenatis a orci id eleifend. Curabitur convallis nibh eget lectus pellentesque, quis fringilla libero tincidunt. Integer consequat commodo ante, vitae laoreet ipsum. Nam erat velit, efficitur in erat eu, faucibus bibendum metus. Vivamus ac risus vestibulum, tempus magna eget, aliquam ligula.
+                        </p>
+                        <button class="AquaButton">
+                            Læs mere
+                        </button>
                     </td>
                     <td></td>
                     <td colspan="2" style="padding-top:0%;padding-left:0%;padding-right:0%">
                         <table style="border:hidden;padding:0%;width:100%">
-                            <tr>
+                            <tr id="whiteThumb">
                                 <td id="whiteThumb">
                                     <a target="_blank" href="~/Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg">
                                         <img src="~/Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" style="height:30%" />
@@ -118,7 +127,7 @@
                                     </p>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr id="whiteThumb">
                                 <td id="whiteThumb">
                                     <a target="_blank" href="~/Gamechanger billedmateriale/Thumbs/thumb_call_of_duty.jpg">
                                         <img src="~/Gamechanger billedmateriale/Thumbs/thumb_call_of_duty.jpg" style="height:30%" />
@@ -139,15 +148,16 @@
                                     </a>
                                 </td>
                                 <td id="thumbText">
-                                    <h6">
-                                        <strong>Forza 4</strong></h6>
-                                        <p>
-                                            Udgiver: Rockstar Games<br />
-                                            Genre: Motorsport
-                                        </p>
+                                    <h6>
+                                        <strong>Forza 4</strong>
+                                    </h6>
+                                    <p>
+                                        Udgiver: Rockstar Games<br />
+                                        Genre: Motorsport
+                                    </p>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr id="whiteThumb">
                                 <td id="whiteThumb">
                                     <a target="_blank" href="~/Gamechanger billedmateriale/Thumbs/thumb_red_dead_redemption.jpg">
                                         <img src="~/Gamechanger billedmateriale/Thumbs/thumb_red_dead_redemption.jpg" style="height:30%" />
@@ -181,7 +191,82 @@
                 </tr>
             </thead>
         </table>
+        <table class="table">
+            <thead>
+                <tr>
+                    <td class="trailerHeader" style="width:2%;padding-right:0%;padding-bottom:0%;padding-top:1%">
+                        <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
+                    </td>
+                    <td class="trailerHeader" id="textHeader" style="width:28%;padding-bottom:0%;padding-top:1%">
+                        <h3>Seneste anmeldelse</h3>
+                    </td>
+                    <td></td>
+                    <td class="trailerHeader" style="width:2%;padding-right:0%;padding-bottom:0%;padding-top:1%">
+                        <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
+                    </td>
+                    <td class="trailerHeader" id="textHeader" style="width:28%;padding-bottom:0%;padding-top:1%">
+                        <h3>Seneste artikel</h3>
+                    </td>
+                    <td id="whiteSpace"></td>
+                    <td class="trailerHeader" style="width:2%;padding-right:0%;padding-bottom:0%;padding-top:1%">
+                        <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
+                    </td>
+                    <td class="trailerHeader" id="textHeader" style="width:28%;padding-bottom:0%;padding-top:1%">
+                        <h3>Bliv medlem</h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="width:32%;padding-left:0%;padding-right:0%" colspan="2">
+                        <img src="~/Gamechanger billedmateriale/Anmeldelser/red_dead_redemption.jpg.png" style="width:100%;padding-left:0%;padding-right:0%" />
+                        <h5>
+                            <strong>
+                                I en hørm af krudtslam og hestelort
+                            </strong>
+                        </h5>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                        </p>
+                        <button class="AquaButton" style="width:30%">
+                            Læs mere
+                        </button>
+                    </td>
+                    <td></td>
+                    <td style="width:30%;padding-left:0%;padding-right:0%" colspan="2">
+                        <img src="~/Gamechanger billedmateriale/Forside/article_gamer.jpg" style="width:100%;padding-left:0%;padding-right:0%" />
+                        <h5>
+                            <strong>
+                                Sådan bliver du professionel gamer
+                            </strong>
+                        </h5>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                        </p>
+                        <button class="AquaButton" style="width:30%">
+                            Læs mere
+                        </button>
+                    </td>
+                    <td></td>
+                    <td style="width:30%;padding-left:0%;padding-right:0%" colspan="2">
+                        <img src="~/Gamechanger billedmateriale/Forside/article_membership.png" style="width:100%;padding-left:0%;padding-right:0%" />
+                        <h5>
+                            <strong>
+                                Bliv medlem i dag og spar 30%
+                            </strong>
+                        </h5>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                        </p>
+                        <button class="AquaButton" style="width:30%">
+                            Læs mere
+                        </button>
+                    </td>
+                </tr>
+            </thead>
+        </table>
+        <div class="Footer">
+            <p>GameChanger website | <u>kontakt@gamechanger.local</u> | <u>www.gamechanger.local</u></p>
+        </div>
     </div>
 
-</body>
 
+</body>
