--- a/GameChanger Projekt - El Ti/wwwroot/css/frontPage.css
+++ b/GameChanger Projekt - El Ti/wwwroot/css/frontPage.css
@@ -29,6 +29,7 @@ html {
     background-color: black;
     opacity: 0.8;
     color: white;
+    vertical-align: bottom;
 }
 
 .frontHeader {
@@ -56,6 +57,7 @@ body {
 table {
     border: hidden;
     border: 1px solid #ccc;
+    border-color: white;
     border-collapse: collapse;
 }
 
@@ -78,17 +80,37 @@ table {
 #whiteThumb {
     padding-left: 2%;
     padding-right: 0%;
-    padding-bottom: 0%
+    padding-bottom: 0%;
+    background-color: white;
 }
 
 #greyThumb {
     padding-left: 2%;
     padding-right: 0%;
     padding-bottom: 0%;
-    background-color: #e5e5e5
+    background-color: #e5e5e5;
 }
 
 #thumbText {
     padding-left: 0%;
     padding-bottom: 0%;
+}
+
+.AquaButton {
+    background-color: deepskyblue;
+    color: white;
+    border-radius: 16px;
+    border: hidden;
+    font-size: 70%;
+    padding: 1.4%;
+    width: 20%;
+}
+
+.Footer {
+    background-color: #dbd2d2;
+    color: dimgrey;
+    text-align: center;
+    padding-top: 1.7%;
+    padding-bottom: .1%;
+    font-size: 10px;
 }
