--- a/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
+++ b/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
@@ -10,23 +10,24 @@
 </head>
 
 <body>
-    <div class="header" id="frontHeader">
-        <div class="setPic">
-            <img src="~/Gamechanger billedmateriale/Slidebanner/banner_assasins_creed_2.jpg" style="width:100%;" />
-            <div class="placetextonPic">
-                <h3>ASSASINS CREED</h3>
-                <p>Assassin's Creed er en computerspilserie, der er udgivet af Ubisoft. I spilserien findes der lige nu 11 spil, hvor det seneste udkom d. 5. oktober 2018. </p>
-                <img src="~/Gamechanger billedmateriale/Logo/favorite_icon.png" style="width:15%;vertical-align:bottom" />
-            </div>
-
+    <div class="setPic">
+        <img src="~/Gamechanger billedmateriale/Slidebanner/banner_assasins_creed_2.jpg" style="width:100%;" />
+        <div class="placetextonPic">
+            <h3>ASSASINS CREED</h3>
+            <p>Assassin's Creed er en computerspilserie, der er udgivet af Ubisoft. I spilserien findes der lige nu 11 spil, hvor det seneste udkom d. 5. oktober 2018. </p>
+            <img src="~/Gamechanger billedmateriale/Logo/favorite_icon.png" style="width:15%;vertical-align:bottom" />
         </div>
+    </div>
+
+    <div class="header; sticky" id="frontHeader">
 
         <div class="topnav" style="text-align: center">
-            <a href="http://localhost:52434/">Forside</a>
+            <a href="http://localhost:55716/">Forside</a>
             <a href="Spil.html">Spil</a>
             <a href="Kontakt.html">Kontakt</a>
         </div>
     </div>
+
     <div class="frontBox">
         <table class="table" style="border:hidden">
             <thead>
@@ -263,10 +264,10 @@
                 </tr>
             </thead>
         </table>
+
         <div class="Footer">
             <p>GameChanger website | <u>kontakt@gamechanger.local</u> | <u>www.gamechanger.local</u></p>
         </div>
     </div>
-
 
 </body>
