--- a/GameChanger Projekt - El Ti/wwwroot/css/tekstHeader.css
+++ b/GameChanger Projekt - El Ti/wwwroot/css/tekstHeader.css
@@ -7,7 +7,6 @@
 .header {
     width: 100%;
     height: 3%;
-    position: absolute;
     top: 0;
     left: 0;
 }
@@ -16,12 +15,12 @@
 .sticky {
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%
 }
 
 /* Style top navigationsbaren. */
 .topnav {
-    overflow: hidden;
     background-color: black;
     opacity: 0.8;
 }
